# receipt-processor-challenge

./: .dockerignore  Cargo.toml  Dockerfile  README.md
examples/: corner-market-receipt.json  target-receipt.json
src/: main.rs
